Mise à jour de la cartographie IGN (#28)
* Ajout du format WMTS pour l'ajout d'une couche

* Début construction tableau infos couches

* Ajout des couches WMTS

* Utilisation du parser OpenLayers

* Variabilisation du parser à utiliser

* Mise à jour SDK Géoportail 2.0.1 => 3.3.6

* Retrait var parser GetCapabilities car utilisation WMTS uniquement

* Retrait couche WFS non utilisée

* Correction format image & affichage couches

* Correction sur l'affichage des couches

* Mise à jour SDK Géoportail 3.3.6 => 3.3.7

* Amélioration découpage fichiers Géoportail

* Ajout couche WMTS en multi-clés

* Retrait btn couche IGN & WMTS pour couche perso

* Bouton ajout couche IGN dans liste

* Troncage pour meilleur affichage informations

* Ajout couche WMS en multi-clés

* Correction sur l'affichage des couches par format

* Amélioration de l'affichage des clés en admin

* Amélioration du visuel

* Sélection manuelle format type WMS possible

* Ajout message temps chargement couches IGN

* Ajustement de l'ajout des couches

* Ajout du changement d'ordre des couches

* Corrections visuelles

* Modif. ordre champ required

* Ordre couches dans une vue séparée

* php-cs-fixer

* Fix sur le géocodage

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1237,6 +1237,21 @@ dl.champ_effectif_camping dd input {
     width: 139px;
 }
 
-#dossierInfos form .btn {
+#dossierInfos form .btn,
+#ign-accordion .row-fluid {
     margin-bottom: 10px;
+}
+
+#ign-accordion span > i {
+    cursor: pointer;
+}
+
+#ign-accordion div[class^='span'] {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+#ign-accordion select[name='FORMAT_COUCHECARTO'] {
+    width: fit-content;
 }
