--- a/application/views/scripts/couches-cartographiques/add.phtml
+++ b/application/views/scripts/couches-cartographiques/add.phtml
@@ -1,8 +1,7 @@
 <form action="<?php echo $this->url(array('action' => $this->row ? "edit" : "add")) ?>" method="post">
-
-	<div class='pull-right btn-group' >
-            <a class='btn' href="<?php echo $this->url(array('action' => 'list')) ?>">Revenir sur la liste des couches cartographiques</a>
-            <input type='submit' class="btn btn-success" value="<?php echo $this->row ? "Modifier" : "Ajouter" ?> la couche" />
+	<div class='pull-right btn-group'>
+		<a class='btn' href="<?php echo $this->url(array('action' => 'list')) ?>">Revenir sur la liste des couches cartographiques</a>
+		<input type='submit' class="btn btn-success" value="<?php echo $this->row ? "Modifier" : "Ajouter" ?> la couche" />
 	</div>
 
 	<h3><?php echo $this->row ? "Modification d'une couche cartographique" : "Ajout d'une couche cartographique" ?></h3>
@@ -12,48 +11,9 @@
 		<dd>
 			<select name="TYPE_COUCHECARTO">
 				<option value="WMS" <?php if(isset($this->row) && $this->row['TYPE_COUCHECARTO'] == 'WMS') echo "selected" ?> >WMS</option>
-				<option value="WFS" <?php if(isset($this->row) && $this->row['TYPE_COUCHECARTO'] == 'WFS') echo "selected" ?> >WFS</option>
+				<option value="WMTS" <?php if(isset($this->row) && $this->row['TYPE_COUCHECARTO'] == 'WMTS') echo "selected" ?> >WMTS</option>
 			</select>
 		</dd>
-                
-		<?php if ($this->key_ign != null): ?>
-		<dt></dt>
-		<dd>
-			<div class='btn-group' style='margin-bottom:10px;'>
-				<button type="button" class="btn dropdown-toggle" data-toggle="dropdown" id='getIGNLayers'>
-					Ajouter une couche IGN
-				</button>
-				<ul class="dropdown-menu" role="menu"></ul>
-			</div>
-			<script>
-				$(document).ready(function(){
-					$('#getIGNLayers').click(function() {
-						var $menu = $(this).parent().find('.dropdown-menu').empty().append('<img src="/images/load.gif"/>')
-						var type = $('select[name="TYPE_COUCHECARTO"]').val();
-						$.get('https://wxs.ign.fr/<?php echo $this->key_ign ?>/autoconf', {}, function(xml) {
-							$menu.empty();
-							var $xml = $(xml);
-							$xml.find('Layer').each(function(i, layer) {
-								var $layer = $(layer);
-								
-								if ($layer.find('Server:first').attr('service') !== 'OGC:'+type) return ;
-								var url = $layer.find("gpp\\:Key").text() ? $layer.find("gpp\\:Key").text() : $layer.find("Key").text();
-								$menu.append('<li class="ignLayer" url="'+url+'" name="'+$layer.find('Name:first').text()+'"><a href="#">'+$layer.find('Title:first').text()+'</a></li>'); 
-							});
-							$('.ignLayer').click(function(e){
-								e.preventDefault();
-								$('input[name="NOM_COUCHECARTO"]').val($(this).text());
-								$('input[name="URL_COUCHECARTO"]').val($(this).attr('url').replace('<?php echo $this->key_ign ?>', '\{key\}'));
-								$('input[name="ISBASELAYER_COUCHECARTO"]').prop( "checked", false);
-								$('input[name="LAYERS_COUCHECARTO"]').val($(this).attr('name'));
-								$('input[name="TRANSPARENT_COUCHECARTO"]').prop( "checked", true );
-							});
-						}, 'xml');
-					});
-				});
-			</script>
-		</dd>
-		<?php endif ?>
                 
 		<dt>Nom de la couche</dt>
 		<dd>
@@ -83,28 +43,16 @@
 		<dd>
 			<select name="FORMAT_COUCHECARTO">
 				<option value="image/png" <?php if(isset($this->row) && $this->row['FORMAT_COUCHECARTO'] == "image/png") echo "selected" ?> >image/png</option>
-				<option value="image/jpg" <?php if(isset($this->row) && $this->row['FORMAT_COUCHECARTO'] == "image/jpg") echo "selected" ?> >image/jpg</option>
+				<option value="image/jpeg" <?php if(isset($this->row) && $this->row['FORMAT_COUCHECARTO'] == "image/jpeg") echo "selected" ?> >image/jpeg</option>
 			</select>
 		</dd>
 
 		<dt>Couche transparente ?</dt>
 		<dd>
-            <input type="hidden" name="TRANSPARENT_COUCHECARTO" value="0" />
-			<input type="checkbox" name="TRANSPARENT_COUCHECARTO" value="1" <?php if(isset($this->row) && $this->row['TRANSPARENT_COUCHECARTO']) echo "checked" ?> />
+			<p>
+            	<input type="hidden" name="TRANSPARENT_COUCHECARTO" value="0" />
+				<input type="checkbox" name="TRANSPARENT_COUCHECARTO" value="1" <?php if(isset($this->row) && $this->row['TRANSPARENT_COUCHECARTO']) echo "checked" ?> />
+			</p>
 		</dd>
 	</dl>
 </form>
-
-<script>
-	$(document).ready(function() {
-		$("select[name='TYPE_COUCHECARTO']").change(function() {
-			if($(this).find('option:selected').val() == "WMS") {
-				$('.format_couche').show();
-			}
-			else {
-				$('.format_couche').hide();
-				$('.format_couche').find('input').val(null);
-			}
-		}).change();
-	});
-</script>
