--- a/application/views/scripts/couches-cartographiques/list.phtml
+++ b/application/views/scripts/couches-cartographiques/list.phtml
@@ -1,17 +1,14 @@
 <?php if ($this->key_ign != null) : ?>
     <div id='geoportail-container'  style="height: 350px; max-height: 350px;"></div>
     <div id="info"></div>
-    <!-- SDK Géoportail -->
-    <script src="/js/sdk-ol/GpSDK3D.js"></script>
-    <link rel="stylesheet" href="/js/sdk-ol/GpSDK3D.css" />
-    <!-- FIN SDK -->
-    <script src="/js/main.js"></script>
+
     <!-- Déplacement du bouton FullScreen (sinon supperposé avec le gestionnaire de couches)
     et du panel Profil Altimétrique (sinon coupé en 2) -->
     <style>
-    .ol-full-screen {right:9px; top:49px;}
-    div[id^=GPelevationPathPanel-] {top:-75px;}
+        .ol-full-screen {right:9px; top:49px;}
+        div[id^=GPelevationPathPanel-] {top:-75px;}
     </style>
+
     <script type="text/javascript">
         <?php
             $public_dir = $_SERVER['DOCUMENT_ROOT'];
@@ -28,7 +25,8 @@
         );
 
         viewer.listen('mapLoaded', afterInitMap);
-        viewer.listen('azimuthChanged', onRotation);            
+        viewer.listen('azimuthChanged', onRotation);
+
         function afterInitMap () {
             // Ajout du bouton FullScreen
             var fsControl = new ol.control.FullScreen({});
@@ -41,23 +39,29 @@
             );
             $('.ol-rotate').css('display', 'none');
         };
+
         function onRotation () {
             viewer.getAzimuth() === 0 ? $('.ol-rotate').css('display', 'none') : $('.ol-rotate').css('display', 'block');
         };
+
         // Affichage de la version du SDK et de sa date de création
         var infoDiv = document.getElementById("info");
         infoDiv.innerHTML = "<h6><p><b><i> SDK version " + Gp.sdkVersion + " (" + Gp.sdkDate + ")</b></i></p></h6>";
     </script>
 <?php elseif ($this->geoconcept_url != null) : ?>
     <div id='geoconcept-container'  style="height: 350px; max-height: 350px;width: 100%"></div>
+
     <script type="text/javascript" src="/js/geoconcept/OpenLayers.js"></script>
     <script type="text/javascript" src="/js/geoconcept/proj4js.js"></script>
     <script type="text/javascript" src="/js/geoconcept/htc-lite.js"></script>
+
     <?php if ($projection = getenv('PREVARISC_PLUGIN_GEOCONCEPT_PROJECTION')): ?>
-    <script type="text/javascript" src="/js/geoconcept/defs/<?php echo $projection ?>.js"></script>
+        <script type="text/javascript" src="/js/geoconcept/defs/<?php echo $projection ?>.js"></script>
     <?php endif ?>
+
     <script type="text/javascript" src="/js/geoconcept/geoconcept.js"></script>
     <link rel="stylesheet" href="/css/geoconcept/htc.css"/>
+
     <script>
         $(document).ready(function() {
             <?php if ($token = getenv('PREVARISC_PLUGIN_GEOCONCEPT_TOKEN') && $app_id = getenv('PREVARISC_PLUGIN_GEOCONCEPT_APP_ID')): ?>
@@ -81,25 +85,27 @@
     </script>
 <?php elseif ($this->key_googlemap != null) : ?>
     <div id='googlemap-container' style="height: 350px; max-height: 350px;"></div>
+
     <script type="text/javascript"
         src="https://maps.googleapis.com/maps/api/js?key=<?php echo $this->key_googlemap ?>&sensor=false">
     </script>
+
     <script type="text/javascript">
         function initialize() {
-        var point = new google.maps.LatLng(<?php echo $this->default_lat ?>, <?php echo $this->default_lon ?>);
-        var map = new google.maps.Map(document.getElementById("googlemap-container"), {
-            center: point,
-            zoom: 12
-        });
-          
-        var marker = new google.maps.Marker({
-            position: point,
-            map: map,
-            title: "<?php echo $this->etablissement['informations']['LIBELLE_ETABLISSEMENTINFORMATIONS'] ?>"
-        });
+            var point = new google.maps.LatLng(<?php echo $this->default_lat ?>, <?php echo $this->default_lon ?>);
+            var map = new google.maps.Map(document.getElementById("googlemap-container"), {
+                center: point,
+                zoom: 12
+            });
+            
+            var marker = new google.maps.Marker({
+                position: point,
+                map: map,
+                title: "<?php echo $this->etablissement['informations']['LIBELLE_ETABLISSEMENTINFORMATIONS'] ?>"
+            });
 
-
-        google.maps.event.addDomListener(window, 'load', initialize);
+            google.maps.event.addDomListener(window, 'load', initialize);
+        }
      </script>
 <?php else: ?>
     <div class='well well-large text-center'>
@@ -111,27 +117,51 @@
     </div>
 <?php endif ?>
 
-<?php if(count($this->couches_cartographiques) == 0) : ?>
+<?php if (count($this->couches_cartographiques) == 0) : ?>
     <div class='well well-large text-center'>
         <p class='lead'>Il n'y a pas de couche cartographique.</p>
-        <p><a href='<?php echo $this->url(array('action' => 'add')) ?>' class='btn btn-large'>Ajouter une couche cartographique</a></p>
+        <p><a href='<?php echo $this->url(array('action' => 'add')) ?>' class='btn btn-large'>Ajouter une couche personnalisée</a></p>
+        <p>
+            <a href='<?php echo $this->url(array('action' => 'add-couche-ign')) ?>' class='btn btn-large'>
+                Ajouter une couche IGN
+            </a>
+            <div class="alert">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                <strong>Attention !</strong> Le chargement de la page d'ajout d'une couche IGN peut prendre du temps si vous avez renseigné plusieurs clés.
+            </div>
+        </p>
     </div>
 <?php else : ?>
-    <p class='text-right'><a class='btn' href='<?php echo $this->url(array('controller' => 'couches-cartographiques', 'action' => 'add'), null, true) ?>'>Ajouter une couche</a></p>
+    <p class='text-right'>
+        <a class='btn' href='<?php echo $this->url(array('controller' => 'couches-cartographiques', 'action' => 'add'), null, true) ?>'>Ajouter une couche personnalisée</a>
+    </p>
+    <p class='text-right'>
+        <a class='btn' href='<?php echo $this->url(array('controller' => 'couches-cartographiques', 'action' => 'add-couche-ign'), null, true) ?>'>Ajouter une couche IGN</a>
+    </p>
+    <p class='text-right'>
+        <a class='btn' href='<?php echo $this->url(array('controller' => 'couches-cartographiques', 'action' => 'change-order'), null, true) ?>'>Changer l'ordre des couches</a>
+    </p>
+
+    <div class="alert pull-right span4">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <strong>Attention !</strong> Le chargement de la page d'ajout d'une couche IGN peut prendre du temps si vous avez renseigné plusieurs clés.
+    </div>
 
     <table class="table">
         <thead>
             <tr>
                 <th>Type</th>
                 <th>Nom de la couche</th>
+                <th>Ordre de la couche</th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
-            <?php foreach($this->couches_cartographiques as $couche_cartographique) : ?>
+            <?php foreach ($this->couches_cartographiques as $couche_cartographique) : ?>
             <tr>
                 <td><?php echo $couche_cartographique['TYPE_COUCHECARTO'] ?></td>
                 <td><?php echo $couche_cartographique['NOM_COUCHECARTO'].(($couche_cartographique['ISBASELAYER_COUCHECARTO']) ? " (couche de base)" : "") ?></td>
+                <td><?= $couche_cartographique['ORDRE_COUCHECARTO'] ?? 'Ordre non renseigné' ?></td>
                 <td>
                     <a href="<?php echo $this->url(array('action' => 'edit', 'id' => $couche_cartographique['ID_COUCHECARTO'])) ?>">Éditer la couche</a><br/>
                     <a href="<?php echo $this->url(array('action' => 'delete', 'id' => $couche_cartographique['ID_COUCHECARTO'])) ?>">Supprimer</a>
