--- a/application/views/scripts/dossier/effectifs-degagements-dossier-edit.phtml
+++ b/application/views/scripts/dossier/effectifs-degagements-dossier-edit.phtml
@@ -1,31 +1,32 @@
 <form action=/dossier/effectifs-degagements-dossier-edit/id/<?php echo $this->idDossier?> method="post">
-    <div class='pull-right' >
+    <div class='pull-right'>
         <input type='submit' class="btn btn-success" value="Sauvegarder modification">
-    </div>        
-        <h3>
-            Effectifs
-        </h3>
-        <textarea class="tinyarea" name='DESCRIPTION_EFFECTIF'>
+    </div>      
+
+    <h3>
+        Effectifs
+    </h3>
+    <textarea class="tinyarea" name='DESCRIPTION_EFFECTIF'>
         <?php
-              if(isset($this->EffectifDegagement[0]["DESCRIPTION_EFFECTIF"]))
-              {echo $this->EffectifDegagement[0]["DESCRIPTION_EFFECTIF"];}
-            ?>
-        </textarea>
-        <h3>
-            Dégagements
-        </h3>
-        <textarea class="tinyarea" name='DESCRIPTION_DEGAGEMENT'>
-            <?php
-              if(isset($this->EffectifDegagement[0]["DESCRIPTION_DEGAGEMENT"]))
-              {echo $this->EffectifDegagement[0]["DESCRIPTION_DEGAGEMENT"];}
-            ?>
-        </textarea>
+            if (isset($this->EffectifDegagement[0]["DESCRIPTION_EFFECTIF"])) {
+                echo $this->EffectifDegagement[0]["DESCRIPTION_EFFECTIF"];
+            }
+        ?>
+    </textarea>
+    
+    <h3>
+        Dégagements
+    </h3>
+    <textarea class="tinyarea" name='DESCRIPTION_DEGAGEMENT'>
+        <?php
+            if (isset($this->EffectifDegagement[0]["DESCRIPTION_DEGAGEMENT"])) {
+                echo $this->EffectifDegagement[0]["DESCRIPTION_DEGAGEMENT"];
+            }
+        ?>
+    </textarea>
 </form>
 
-
-
 <script type='text/javascript'>
-    
     tinymce.init({
         selector: '.tinyarea',
         height: 150,
@@ -41,47 +42,5 @@
             '//fast.fonts.net/cssapi/e6dc9b99-64fe-4292-ad98-6974f93cd2a2.css',
             '//www.tinymce.com/css/codepen.min.css'
         ]
-    });
-
-    
-    $(document).ready(function() {
-
-
-
-
-        $(".see-balises").click(function() {
-            var idEts = "<?php echo $this->etablissement['general']['ID_ETABLISSEMENT'] ?>";
-            var changement = $(this).attr("data-value");
-            var dialogAlerte = $('<div style="display:none;"></div>').appendTo('body');
-    
-            dialogAlerte.dialog({
-                title: "Liste des balises disponibles",
-                modal: true,
-                autoOpen: false,
-                width: 600,
-                height: 'auto',
-                buttons: {
-                    "Fermer": function() {
-                        dialogAlerte.html("");
-                        dialogAlerte.dialog("close");
-                    }
-                },
-                close: function(event, ui){
-                    dialogAlerte.html("");
-                    dialogAlerte.dialog("close");
-                }
-            });
-            $.ajax({
-                type: "POST",
-                url: "/changement/balises",
-                data: { "id_etablissement": idEts, "changement": changement },
-                success: function(msg){
-                    dialogAlerte.html(msg);
-                    dialogAlerte.dialog("open");
-                },
-            });
-            return false;
-            
-        });
     });
 </script>
