--- a/application/views/scripts/etablissement/effectifs-degagements-etablissement.phtml
+++ b/application/views/scripts/etablissement/effectifs-degagements-etablissement.phtml
@@ -5,7 +5,7 @@
 
     <h3>Effectifs :</h3>
     <?php
-        if (isset($this->EffectifDegagement[0]["DESCRIPTION_EFFECTIF"])) {
+        if ('' !== $this->EffectifDegagement[0]["DESCRIPTION_EFFECTIF"]) {
             echo $this->EffectifDegagement[0]["DESCRIPTION_EFFECTIF"];
         } else {
             echo "Aucune description";
@@ -14,7 +14,7 @@
 
     <h3>Dégagements :</h3>
     <?php
-        if (isset($this->EffectifDegagement[0]["DESCRIPTION_DEGAGEMENT"])) {
+        if ('' !== $this->EffectifDegagement[0]["DESCRIPTION_DEGAGEMENT"]) {
             echo $this->EffectifDegagement[0]["DESCRIPTION_DEGAGEMENT"];
         } else {
             echo "Aucune description";
