--- a/application/views/scripts/etablissement/effectifs-degagements-etablissement.phtml
+++ b/application/views/scripts/etablissement/effectifs-degagements-etablissement.phtml
@@ -1,11 +1,11 @@
 <form action=/etablissement/effectifs-degagements-etablissement-edit/id/<?php echo $this->idDossier?> method="get">
     <div class='pull-right'>
-        <input class="btn btn-success" type='submit' value="Modifier effectifs dégagements"/>
+        <input class="btn btn-success" type='submit' value="Modifier les effectifs et dégagements"/>
     </div>
 
     <h3>Effectifs :</h3>
     <?php
-        if ('' !== $this->EffectifDegagement[0]["DESCRIPTION_EFFECTIF"]) {
+        if (isset($this->EffectifDegagement[0]) && '' !== $this->EffectifDegagement[0]["DESCRIPTION_EFFECTIF"]) {
             echo $this->EffectifDegagement[0]["DESCRIPTION_EFFECTIF"];
         } else {
             echo "Aucune description";
@@ -14,7 +14,7 @@
 
     <h3>Dégagements :</h3>
     <?php
-        if ('' !== $this->EffectifDegagement[0]["DESCRIPTION_DEGAGEMENT"]) {
+        if (isset($this->EffectifDegagement[0]) && '' !== $this->EffectifDegagement[0]["DESCRIPTION_DEGAGEMENT"]) {
             echo $this->EffectifDegagement[0]["DESCRIPTION_DEGAGEMENT"];
         } else {
             echo "Aucune description";
