--- a/application/layouts/etablissement.phtml
+++ b/application/layouts/etablissement.phtml
@@ -3,22 +3,22 @@
 <?php $action_name = Zend_Controller_Front::getInstance()->getRequest()->getActionName() ?>
 
 <ul class='nav nav-tabs nav-stacked menu_dashboard' >
-    <li class="<?php echo $action_name == 'index' ? 'active' : '' ?>">
-        <a href='<?php echo $this->url(array("action"=>"index")) ?>'>
+    <li class="<?= $action_name == 'index' ? 'active' : '' ?>">
+        <a href='<?= $this->url(array("action"=>"index")) ?>'>
             <em class="icon-info-sign icon-black"></em>
             Général
         </a>
     </li>
     
     <?php if ($this->etablissement['informations']['LIBELLE_GENRE'] != 'Site') : ?>
-        <li class="<?php echo $action_name == 'textes-applicables' ? 'active' : '' ?>">
-            <a href='<?php echo $this->url(array("action"=>"textes-applicables")) ?>'>
+        <li class="<?= strpos($action_name, 'textes-applicables') !== false ? 'active' : '' ?>">
+            <a href='<?= $this->url(array("action"=>"textes-applicables")) ?>'>
                 <em class="icon-align-center icon-black"></em>
                 Textes applicables
             </a>
         </li>
-        <li class="<?php echo $action_name == 'descriptif' ? 'active' : '' ?>">
-            <a href='<?php echo $this->url(array("action"=>"descriptif")) ?>'>
+        <li class="<?= strpos($action_name, 'descriptif') !== false ? 'active' : '' ?>">
+            <a href='<?= $this->url(array("action"=>"descriptif")) ?>'>
                 <em class="icon-book icon-black"></em>
                 Descriptif
             </a>
@@ -26,41 +26,41 @@
     <?php endif ?>
     
     <?php if ($this->isAllowedEffectifsDegagements): ?>
-        <li class="<?php echo $action_name == 'effectifs-degagements-etablissement' ? 'active' : '' ?>">
-            <a class='sep' href='<?php echo $this->url(array("action"=>"effectifs-degagements-etablissement")) ?>'>
+        <li class="<?= strpos($action_name, 'effectifs-degagements-etablissement') !== false ? 'active' : '' ?>">
+            <a class='sep' href='<?= $this->url(array("action"=>"effectifs-degagements-etablissement")) ?>'>
                 <em class="icon-th-list icon-black"></em>
                 Effectifs et dégagements
             </a>
         </li>
     <?php endif ?>
 
-    <li class="<?php echo $action_name == 'pieces-jointes' ? 'active' : '' ?>">
-        <a href='<?php echo $this->url(array("action"=>"pieces-jointes")) ?>'>
+    <li class="<?= $action_name == 'pieces-jointes' ? 'active' : '' ?>">
+        <a href='<?= $this->url(array("action"=>"pieces-jointes")) ?>'>
             <em class="icon-share icon-black"></em>
             Pièces jointes
         </a>
     </li>
-    <li class="<?php echo $action_name == 'contacts' ? 'active' : '' ?>">
-        <a href='<?php echo $this->url(array("action"=>"contacts")) ?>'>
+    <li class="<?= $action_name == 'contacts' ? 'active' : '' ?>">
+        <a href='<?= $this->url(array("action"=>"contacts")) ?>'>
             <em class="icon-user icon-black"></em>
             Contacts
         </a>
     </li>
-    <li class="<?php echo $action_name == 'dossiers' ? 'active' : '' ?>">
-        <a href='<?php echo $this->url(array("action"=>"dossiers")) ?>'>
+    <li class="<?= $action_name == 'dossiers' ? 'active' : '' ?>">
+        <a href='<?= $this->url(array("action"=>"dossiers")) ?>'>
             <em class="icon-folder-open icon-black"></em>
             Dossiers
         </a>
     </li>
-    <li class="<?php echo $action_name == 'historique' ? 'active' : '' ?>">
-        <a class='sep' href='<?php echo $this->url(array("action"=>"historique")) ?>'>
+    <li class="<?= $action_name == 'historique' ? 'active' : '' ?>">
+        <a class='sep' href='<?= $this->url(array("action"=>"historique")) ?>'>
             <em class="icon-repeat icon-black"></em>
             Afficher l'historique
         </a>
     </li>
     <li class="nav-header">Actions</li>
     <li>
-        <a href='<?php echo $this->url(array('controller' => 'dossier', 'action' => 'add', 'id_etablissement' => $this->etablissement['general']['ID_ETABLISSEMENT']), null, true)?> '>
+        <a href='<?= $this->url(array('controller' => 'dossier', 'action' => 'add', 'id_etablissement' => $this->etablissement['general']['ID_ETABLISSEMENT']), null, true)?> '>
             <em class="icon-plus icon-black"></em>
             Ajouter un dossier
         </a>
@@ -85,17 +85,17 @@
     <h2 class="page-header">
         <?php if ($this->etablissement['parents'] > 0) : ?>
             <?php foreach ($this->etablissement['parents'] as $etablissement) : ?>
-                <a href='/etablissement/index/id/<?php echo  $etablissement["ID_ETABLISSEMENT"] ?>'>
-                    <?php echo $etablissement["LIBELLE_ETABLISSEMENTINFORMATIONS"] ?>
+                <a href='/etablissement/index/id/<?=  $etablissement["ID_ETABLISSEMENT"] ?>'>
+                    <?= $etablissement["LIBELLE_ETABLISSEMENTINFORMATIONS"] ?>
                 </a> - 
             <?php endforeach ?>
         <?php endif ?>
-        <?php echo file_exists(APPLICATION_PATH . DS . '..' . DS . 'public' . DS . 'images' . DS . 'types' . DS . 'b' . DS . 'icone-type-' . $this->etablissement['informations']['LIBELLE_TYPE_PRINCIPAL'] . '.png') ? "<img src='/images/types/b/icone-type-" . $this->etablissement['informations']['LIBELLE_TYPE_PRINCIPAL'] . ".png' title='" . $this->etablissement['informations']['LIBELLE_TYPE_PRINCIPAL'] . "' />" : ''; ?>
-        <?php echo $this->etablissement['informations']["LIBELLE_ETABLISSEMENTINFORMATIONS"] ?>
+        <?= file_exists(APPLICATION_PATH . DS . '..' . DS . 'public' . DS . 'images' . DS . 'types' . DS . 'b' . DS . 'icone-type-' . $this->etablissement['informations']['LIBELLE_TYPE_PRINCIPAL'] . '.png') ? "<img src='/images/types/b/icone-type-" . $this->etablissement['informations']['LIBELLE_TYPE_PRINCIPAL'] . ".png' title='" . $this->etablissement['informations']['LIBELLE_TYPE_PRINCIPAL'] . "' />" : ''; ?>
+        <?= $this->etablissement['informations']["LIBELLE_ETABLISSEMENTINFORMATIONS"] ?>
         <?php if ($this->etablissement['general']['NUMEROID_ETABLISSEMENT']): ?>
             <span class="pull-right">
                 <small>
-                    #<?php echo $this->etablissement['general']["NUMEROID_ETABLISSEMENT"] ?>
+                    #<?= $this->etablissement['general']["NUMEROID_ETABLISSEMENT"] ?>
                 </small>
             </span>
         <?php endif ?>
@@ -109,12 +109,12 @@
     <?php elseif ($this->etablissement['avis'] != null) : ?>
     
          <?php if ($this->etablissement['avis'] == 1 && $this->avis == "avisDoss") : ?>
-            <p class="avis F">Favorable <?php echo $this->etablissement['informations']['ID_GENRE'] == 3 ? '' : " à l'exploitation " ?></p>
+            <p class="avis F">Favorable <?= $this->etablissement['informations']['ID_GENRE'] == 3 ? '' : " à l'exploitation " ?></p>
          <?php elseif ($this->etablissement['avis'] == 2  && $this->avis == "avisDoss") : ?>
             <p class="avis D">
-               Défavorable <?php echo $this->etablissement['informations']['ID_GENRE'] == 3 ? '' : " à l'exploitation " ?>
+               Défavorable <?= $this->etablissement['informations']['ID_GENRE'] == 3 ? '' : " à l'exploitation " ?>
                <?php if ($this->etablissement['facteur_dangerosite'] > 0) : ?>
-                  &nbsp;-&nbsp;Facteur de criticité : <?php echo $this->etablissement['facteur_dangerosite'] ?>
+                  &nbsp;-&nbsp;Facteur de criticité : <?= $this->etablissement['facteur_dangerosite'] ?>
                <?php endif ?>
             </p>
          <?php else : ?>
@@ -147,7 +147,7 @@
     &nbsp;
 
     <!-- Statut -->
-    <p>Statut : <?php echo $this->etablissement['informations']['LIBELLE_STATUT'] ?></p>
+    <p>Statut : <?= $this->etablissement['informations']['LIBELLE_STATUT'] ?></p>
 </div>
 
 <div id='fiche_etablissement'>
@@ -156,4 +156,4 @@
 </div>
 
 <?php $this->placeholder('after_content')->captureEnd() ?>
-<?php echo $this->render('dashboard.phtml') // Rendu du layout par défaut avec les placeholders?>
+<?= $this->render('dashboard.phtml') // Rendu du layout par défaut avec les placeholders?>
