--- a/application/views/scripts/etablissement/effectifs-degagements-etablissement-edit.phtml
+++ b/application/views/scripts/etablissement/effectifs-degagements-etablissement-edit.phtml
@@ -1,6 +1,6 @@
 <form action=/etablissement/effectifs-degagements-etablissement-edit/id/<?php echo $this->idDossier?> method="post">
     <div class='pull-right'>
-        <input type='submit' class="btn btn-success" value="Sauvegarder modification">
+        <input type='submit' class="btn btn-success" value="Sauvegarder les modifications">
     </div>
 
     <h3>
