--- a/application/views/scripts/dossier/effectifs-degagements-dossier-edit.phtml
+++ b/application/views/scripts/dossier/effectifs-degagements-dossier-edit.phtml
@@ -1,4 +1,4 @@
-<form action=/dossier/effectifs-degagements-dossier-edit/id/<?php echo $this->idDossier?> method="post">
+<form action="<?= $this->url(array('controller' => 'dossier', 'action' => 'effectifs-degagements-dossier-edit', 'id' => $this->idDossier), false, true) ?>" method="post">
     <div class='pull-right'>
         <input type='submit' class="btn btn-success" value="Sauvegarder les modifications">
     </div>      
