--- a/application/views/scripts/calendrier-des-commissions/generationcompterendu.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationcompterendu.phtml
@@ -40,28 +40,22 @@ if (file_exists(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR
 				addChamp($dossInfos,'objetDossier', $dossierInfos['OBJET_DOSSIER']);
 				addChamp($dossInfos,'natureDossier', $dossierInfos["LIBELLE_DOSSIERNATURE"]);
 
-				/**
-				 *instanciation de la Lib permettant de convertir le HTML en format string  
-				 *Attention ! Il ne faut pas mettre de style sur le texte dans le wiziwig sinon le parsing ne se realisera pas 
-				 */
 				$html2Text = new \kranemora\Html2Text\Html2Text;
-				/**
-				 * Tableau des champs effectif degagment $k = nom du champ en champ de fusion, $v = valeur du champ
-				 */
+
 				$tabEffDegKV = array(
-					'descriptionEffectifDossier' => $this->dossierComm[0]['DESCRIPTION_EFFECTIF_DOSSIER'],
-					'descriptionDegagementDossier' => $this->dossierComm[0]['DESCRIPTION_DEGAGEMENT_DOSSIER'],
-					'descriptionEffectifEtablissement' => $this->dossierComm[0]['DESCRIPTION_EFFECTIF_ETABLISSEMENT'],
-					'descriptionDegagementEtablissement' => $this->dossierComm[0]['DESCRIPTION_DEGAGEMENT_ETABLISSEMENT'],
+					'descriptionEffectifDossier' => $dossierInfos['DESCRIPTION_EFFECTIF_DOSSIER'],
+					'descriptionDegagementDossier' => $dossierInfos['DESCRIPTION_DEGAGEMENT_DOSSIER'],
+					'descriptionEffectifEtablissement' => $dossierInfos['DESCRIPTION_EFFECTIF_ETABLISSEMENT'],
+					'descriptionDegagementEtablissement' => $dossierInfos['DESCRIPTION_DEGAGEMENT_ETABLISSEMENT'],
 				);
 				/**
 				 * Foreach sur le tableau pour attribuer les valeurs dans les champs de fusion
 				 * Attention ! Si la valeur est NULL ou qu'un style est appliqué depuis le wiziwig le resultat sera : ""
 				 */
-				foreach($tabEffDegKV as $k => $v){
-					if(isset($v) && strlen($v) > 0 ){
+				foreach ($tabEffDegKV as $k => $v) {
+					if (isset($v) && strlen($v) > 0 ) {
 						addChamp($dossInfos,$k, $html2Text->convert($v));
-					}else{
+					} else {
 						addChamp($dossInfos,$k, "");
 					}
 				}
