--- a/application/views/scripts/dossier/effectifs-degagements-dossier.phtml
+++ b/application/views/scripts/dossier/effectifs-degagements-dossier.phtml
@@ -1,5 +1,5 @@
 <div class='pull-right'>
-    <a href="<?= $this->url(array('controller' => 'dossier', 'action' => 'effectifs-degagements-dossier-edit', 'id' => $this->idDossier), false, true) ?>" class="btn btn-success">Modifier les effectifs et dégagements</a>
+    <a href="<?= $this->url(array('controller' => 'dossier', 'action' => 'effectifs-degagements-dossier-edit', 'id' => $this->idDossier), false, true) ?>" class="btn">Modifier les effectifs et dégagements</a>
 </div>
 
 <h3>Effectifs :</h3>
@@ -19,22 +19,3 @@
         echo "Aucune description";
     }
 ?>
-
-<script type='text/javascript'>
-    tinymce.init({
-        selector: '.tinyarea',
-        height: 150,
-        menubar: false,
-        statusbar: false,
-        plugins: [
-            'advlist autolink lists link image charmap print preview anchor',
-            'searchreplace visualblocks code fullscreen',
-            'insertdatetime media table contextmenu paste code'
-        ],
-        toolbar: 'insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link',
-        content_css: [
-            '//fast.fonts.net/cssapi/e6dc9b99-64fe-4292-ad98-6974f93cd2a2.css',
-            '//www.tinymce.com/css/codepen.min.css'
-        ]
-    });
-</script>
