--- a/application/views/scripts/etablissement/effectifs-degagements-etablissement-edit.phtml
+++ b/application/views/scripts/etablissement/effectifs-degagements-etablissement-edit.phtml
@@ -1,6 +1,7 @@
 <form action="<?= $this->url(array('controller' => 'etablissement', 'action' => 'effectifs-degagements-etablissement-edit', 'id' => $this->idEtablissement), false, true) ?>" method="post">
     <div class='pull-right'>
-        <input type='submit' class="btn btn-success" value="Sauvegarder les modifications">
+        <a href="<?= $this->url(array('controller' => 'etablissement', 'action' => 'effectifs-degagements-etablissement', 'id' => $this->idEtablissement), false, true) ?>" class='btn'>Annuler la modification</a>
+        <input type='submit' class="btn btn-success" value="Sauvegarder">
     </div>
 
     <h3>
@@ -39,7 +40,6 @@
         ],
         toolbar: 'insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link',
         content_css: [
-            '//fast.fonts.net/cssapi/e6dc9b99-64fe-4292-ad98-6974f93cd2a2.css',
             '//www.tinymce.com/css/codepen.min.css'
         ]
     });
