--- a/application/views/scripts/calendrier-des-commissions/generationcompterendu.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationcompterendu.phtml
@@ -40,24 +40,16 @@ if (file_exists(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR
 				addChamp($dossInfos,'objetDossier', $dossierInfos['OBJET_DOSSIER']);
 				addChamp($dossInfos,'natureDossier', $dossierInfos["LIBELLE_DOSSIERNATURE"]);
 
-				$html2Text = new \kranemora\Html2Text\Html2Text;
-
+				// Gestion des effectifs & dégagements
 				$tabEffDegKV = array(
 					'descriptionEffectifDossier' => $dossierInfos['DESCRIPTION_EFFECTIF_DOSSIER'],
 					'descriptionDegagementDossier' => $dossierInfos['DESCRIPTION_DEGAGEMENT_DOSSIER'],
 					'descriptionEffectifEtablissement' => $dossierInfos['DESCRIPTION_EFFECTIF_ETABLISSEMENT'],
 					'descriptionDegagementEtablissement' => $dossierInfos['DESCRIPTION_DEGAGEMENT_ETABLISSEMENT'],
 				);
-				/**
-				 * Foreach sur le tableau pour attribuer les valeurs dans les champs de fusion
-				 * Attention ! Si la valeur est NULL ou qu'un style est appliqué depuis le wiziwig le resultat sera : ""
-				 */
-				foreach ($tabEffDegKV as $k => $v) {
-					if (isset($v) && strlen($v) > 0 ) {
-						addChamp($dossInfos, $k, $html2Text->convert($v));
-					} else {
-						addChamp($dossInfos, $k, "");
-					}
+
+				foreach ($tabEffDegKV as $nomChamp => $valeurChamp) {
+					addChamp($dossInfos, $nomChamp, $valeurChamp);
 				}
 			
 				$dateComm = new Zend_Date($this->dateComm);
