--- a/application/views/scripts/dossier/effectifs-degagements-dossier-edit.phtml
+++ b/application/views/scripts/dossier/effectifs-degagements-dossier-edit.phtml
@@ -1,46 +1,16 @@
 <form action="<?= $this->url(array('controller' => 'dossier', 'action' => 'effectifs-degagements-dossier-edit', 'id' => $this->idDossier), false, true) ?>" method="post">
     <div class='pull-right'>
-        <a href="<?= $this->url(array('controller' => 'dossier', 'action' => 'effectifs-degagements-dossier', 'id' => $this->idEtablissement), false, true) ?>" class='btn'>Annuler la modification</a>
+        <a href="<?= $this->url(array('controller' => 'dossier', 'action' => 'effectifs-degagements-dossier', 'id' => $this->idDossier), false, true) ?>" class='btn'>Annuler la modification</a>
         <input type='submit' class="btn btn-success" value="Sauvegarder">
     </div>      
 
     <h3>
         Effectifs
     </h3>
-    <textarea class="tinyarea" name='DESCRIPTION_EFFECTIF'>
-        <?php
-            if (isset($this->EffectifDegagement[0]["DESCRIPTION_EFFECTIF"])) {
-                echo $this->EffectifDegagement[0]["DESCRIPTION_EFFECTIF"];
-            }
-        ?>
-    </textarea>
+    <textarea name='DESCRIPTION_EFFECTIF'><?php if (isset($this->EffectifDegagement[0]["DESCRIPTION_EFFECTIF"])) { echo $this->EffectifDegagement[0]["DESCRIPTION_EFFECTIF"]; } ?></textarea>
     
     <h3>
         Dégagements
     </h3>
-    <textarea class="tinyarea" name='DESCRIPTION_DEGAGEMENT'>
-        <?php
-            if (isset($this->EffectifDegagement[0]["DESCRIPTION_DEGAGEMENT"])) {
-                echo $this->EffectifDegagement[0]["DESCRIPTION_DEGAGEMENT"];
-            }
-        ?>
-    </textarea>
+    <textarea name='DESCRIPTION_DEGAGEMENT'><?php if (isset($this->EffectifDegagement[0]["DESCRIPTION_DEGAGEMENT"])) { echo $this->EffectifDegagement[0]["DESCRIPTION_DEGAGEMENT"]; } ?></textarea>
 </form>
-
-<script type='text/javascript'>
-    tinymce.init({
-        selector: '.tinyarea',
-        height: 150,
-        menubar: false,
-        statusbar: false,
-        plugins: [
-            'advlist autolink lists link image charmap print preview anchor',
-            'searchreplace visualblocks code fullscreen',
-            'insertdatetime media table contextmenu paste code'
-        ],
-        toolbar: 'insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link | table',
-        content_css: [
-            '//www.tinymce.com/css/codepen.min.css'
-        ]
-    });
-</script>
