--- a/application/views/scripts/etablissement/effectifs-degagements-etablissement-edit.phtml
+++ b/application/views/scripts/etablissement/effectifs-degagements-etablissement-edit.phtml
@@ -7,10 +7,10 @@
     <h3>
         Effectifs
     </h3>
-    <textarea name='DESCRIPTION_EFFECTIF'><?php if (isset($this->EffectifDegagement[0]["DESCRIPTION_EFFECTIF"])) { echo $this->EffectifDegagement[0]["DESCRIPTION_EFFECTIF"]; } ?></textarea>
+    <textarea name='DESCRIPTION_EFFECTIF'><?php if (isset($this->EffectifDegagement["DESCRIPTION_EFFECTIF"])) { echo $this->EffectifDegagement["DESCRIPTION_EFFECTIF"]; } ?></textarea>
 
     <h3>
         Dégagements
     </h3>
-    <textarea name='DESCRIPTION_DEGAGEMENT'><?php if (isset($this->EffectifDegagement[0]["DESCRIPTION_DEGAGEMENT"])) { echo $this->EffectifDegagement[0]["DESCRIPTION_DEGAGEMENT"]; } ?></textarea>
+    <textarea name='DESCRIPTION_DEGAGEMENT'><?php if (isset($this->EffectifDegagement["DESCRIPTION_DEGAGEMENT"])) { echo $this->EffectifDegagement["DESCRIPTION_DEGAGEMENT"]; } ?></textarea>
 </form>
